Fixed input on safari browser

--- a/components/03-modules/header/_search-form.scss
+++ b/components/03-modules/header/_search-form.scss
@@ -1,16 +1,16 @@
-$search-form__height            : 34px !default;
-$search-form__width             : 100% !default;
+$search-form__height : 34px !default;
+$search-form__width : 100% !default;
 $search-form__width--extra-large: 70% !default;
-$search-form__alignment         : flex-end !default;
-$search-form__margin            : 0 !default;
-$search-form__border-color      : $gray-light !default;
-$search-form__font-size         : $font-size-small !default;
+$search-form__alignment : flex-end !default;
+$search-form__margin : 0 !default;
+$search-form__border-color : $gray-light !default;
+$search-form__font-size : $font-size-small !default;
 
-$search-form__input-height      : 32px !default;
+$search-form__input-height : 32px !default;
 
-$search-form__button-size       : 18px !default;
-$search-form__button-margin     : 0 !default;
-$search-form__button-border     : none !default;
+$search-form__button-size : 18px !default;
+$search-form__button-margin : 0 !default;
+$search-form__button-border : none !default;
 $search-form__button-background : transparent !default;
 $search-form__button-icon-color : $gray-dark !default;
 
@@ -24,9 +24,12 @@ $search-form__placeholder-color : $gray !default;
     border: 1px solid $search-form__border-color;
     border-radius: $search-form__height;
     z-index: 1;
+    line-height: normal;
+
     @include mq($screen-m) {
         position: relative;
     }
+
     @include mq($screen-xl) {
         width: $search-form__width--extra-large;
     }
@@ -57,6 +60,7 @@ $search-form__placeholder-color : $gray !default;
         border: $search-form__button-border;
         border-radius: $search-form__height;
         background-color: $search-form__button-background;
+
         &:focus,
         &:hover {
             background-color: $search-form__button-background;
